--- a/styles/header.css
+++ b/styles/header.css
@@ -21,4 +21,5 @@
   padding-block: 14px;
   border: solid 1px var(--stroke-color);
   border-inline: none; /* remove bordas das laterais */
+  justify-content: space-between;
 }
