structuring the section of this

--- a/styles/global.css
+++ b/styles/global.css
@@ -40,18 +40,18 @@ h1, h1, h3 {
   font: inherit;
 }
 
+img {
+  /* respeita o tamanho da caixa que temos disponível na janela, sem transbordar a imagem e evita a
+  barra de rolagem */
+  max-width: 100%; 
+}
+
 .container {
   max-width: 1280px;
   padding-inline: 32;
   margin-inline: auto;
 }
 
-/* utility-first */
-
-.grid {
-  display: grid;
-}
-
-.grid-flow-col {
-  grid-auto-flow: column;
+main {
+  margin-top: 40px;
 }
