--- a/styles/global.css
+++ b/styles/global.css
@@ -57,13 +57,13 @@ main {
 }
 
 .content-tag {
-  display: inline-block;
+  display: inline-block; /* importante nesse caso de utilizar o inline-block é que não importa em qual tag esteja, não afeta o seu comportamento, além disso, todas as outras propriedades colocadas abaixo, faz o cálculo corretamente */
   background-color: var(--brand-color-dark);
   padding: 4px 8px;
   border-radius: 4px;
   font: 500 10px/1.2 var(--font-family);
   text-transform: uppercase;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.04em; /* espaçamento entre as letras */
   color: var(--text-color-primary);
-  box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.25);
+  box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.25); /* adicionando sombreamento na caixa */
 }
